new files added

--- a/frontendMaster/orderSummaryComponent/index.html
+++ b/frontendMaster/orderSummaryComponent/index.html
@@ -42,8 +42,8 @@
 
     </div>
     <div class="attribution">
-        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>.
-        Coded by <a href="#">Atul Gupta</a>.
+        Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>
+        Coded by <a href="https://www.linkedin.com/in/atul-gupta-5601471b7/" target="#">Atul Gupta</a>
     </div>
 </body>
 
