--- a/frontendMaster/base-apparel-coming-soon-master/index.html
+++ b/frontendMaster/base-apparel-coming-soon-master/index.html
@@ -1,33 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
 
-  <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
+  <link rel="icon" type="image/png" sizes="32x32" href="./assets/favicon-32x32.png">
+
+  <link rel="stylesheet" href="./css/style.css">
+
   <title>Frontend Mentor | Base Apparel coming soon page</title>
 
   <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
   <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
+    .attribution {
+      font-size: 11px;
+      text-align: center;
+    }
+
+    .attribution a {
+      color: hsl(228, 45%, 44%);
+    }
   </style>
 </head>
+
 <body>
+  <header class="logo">
+    <img src="./assets/logo.svg" alt="Logo">
+  </header>
+  <section class="container">
+    <div class="left">
+    <h1>WE'RE <br/> <span>COMING <br/>SOON</span></h1>
+    <p>  Hello fellow shoppers! We're currently building our new fashion store.
+      Add your email below to stay up-to-date with announcements and our launch deals.</p>
 
-  We're coming soon
+    <form action="#" class="input_Taker">
+      <input id="inputMail" name="Email" id="Email" value="" type="email" placeholder="Email Address">
+      <img src="./assets/icon-error.svg" alt="error_Icon" class="error_Icon">
+      <button class="btn" type="submit">
+        <img src="./assets/icon-arrow.svg" alt="arrow_Icon" class="arrow_Icon">
+      </button>
+      <p class="error_Text">Please provide a valid email</p>
+    </form>
+    </div>
 
-  Hello fellow shoppers! We're currently building our new fashion store. 
-  Add your email below to stay up-to-date with announcements and our launch deals.
+    <div class="right"></div>
+  </section>
 
-  Email Address
-  
   <footer>
     <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
+      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>
+      Coded by <a href="https://www.linkedin.com/in/atul-gupta-5601471b7/" target="#">Atul Gupta</a>
     </p>
   </footer>
+
+  <script src="./js/main.js">
+
+  </script>
 </body>
+
 </html>
